src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__chatwidget_markdown_code_blocks_vt100_snapshot.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---



































•     -- Indented code block (4 spaces)
      SELECT *
      FROM "users"
      WHERE "email" LIKE '%@example.com';

  ```sh
  printf 'fenced within fenced\n'
  ```

  {
    // comment allowed in jsonc
    "path": "C:\\Program Files\\App",
    "regex": "^foo.*(bar)?$"
  }
