src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__disabled_slash_command_while_task_running_snapshot.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: blob
---
■ '/model' is disabled while a task is in progress.
