src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: src/agent/cli/product/tui_app/src/chatwidget/tests.rs
expression: lines_to_single_string(&decision)
---
✔ You approved codex to run echo hello world this time
